Bug 107693 - Missing accelerator key for Tools > Relationships... with gtk3
Summary: Missing accelerator key for Tools > Relationships... with gtk3
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2017-05-08 00:00 UTC by Terrence Enger
Modified: 2017-05-12 04:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
bibisect details from lo-linux-dbgutil-daily-till52 (2.40 KB, text/plain)
2017-05-08 00:04 UTC, Terrence Enger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Terrence Enger 2017-05-08 00:00:52 UTC
STR

(1) At shell prompt,
        export SAL_USE_VCLPLUGIN=gtk3

(2) From the shell prompt open a Base document, for example
    embedded_HSQL.odb attached to bug 106482
    <http://bugs.documentfoundation.org/attachment.cgi?id=132614>.
    Program presents main database window.

(3) Open menu Tools.  First option in the menu is "Relationships..."

    Expected:  Letter R is underscored to advertise an accelerator key.

    Observed:  No underscore; "R" in this menu does nothing.

With gen instead of gtk3, the program underscores the accelerator key,
and the key does open the "Relation Design" window.

This observation is on debian-stretch with daily Linux dbgutil
bibisect repository version 2017-05-07 among others.

In view of bibisect results (details coming soon), I am setting
version 5.2.0.0.alpha0+.  Is this right?

I am setting importance minor and keywords regression, bibisected.
Comment 1 Terrence Enger 2017-05-08 00:04:04 UTC
Created attachment 133147 [details]
bibisect details from lo-linux-dbgutil-daily-till52

Working with the -till52 bibisect repository on debian-stretch, I have
determined that the bug started somewhere in the 50 commits ...

          commit    date        s-h
          --------  ----------  --------
    good  a441153e  2016-02-26  49f81b3f
    bad   4c8042c3  2016-02-27  af57a81d

In that range, I see commits by Caolán McNamara with "gtk3" in the
commit message.  I am not adding him to the cc until the bug report is
confirmed.
Comment 2 Julien Nabet 2017-05-08 07:47:18 UTC
On pc Debian x86-64 with master sources updated some days ago, I could reproduce this with gtk and gtk3 rendering.
I don't reproduce this with kde4 or gen rendering.
Comment 3 Terrence Enger 2017-05-08 08:30:35 UTC
Caolán,

I have added you to cc.  Does this interest you?
Comment 4 Caolán McNamara 2017-05-08 13:15:48 UTC
Probably because gtk3 went to native menubar and menus and DBRelationDesign in officecfg/registry/data/org/openoffice/Office/UI/DbuCommands.xcu has no mnemonic key defined while the non-native menus probably generate one if one is missing

gtk2 code should normally use the gen code for menus, so (presumably) should also generate menu mnemonics and does for me, though if you are under Ubuntu and Unity, then the unity menus are set with the same underlying stuff as the native gtk3 ones, so I guess they could be un-mnemoniced entries in that case too.

Moving the generation of the missing mnemonics from Execute to Activate will probably do the right thing
Comment 5 Commit Notification 2017-05-08 13:18:53 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=946049692eff89f0571983df8f0362399d2dd656

Resolves: tdf#107693 move CreateAutoMnemonics from Execute to Activate

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2017-05-11 20:35:46 UTC
When launching LO module, there's no shortcut indicated in menu.
If I click on Tools to test Relationships for example, the entries don't have shortcuts.
Now if press Alt, shortcuts appear on menu. If I type Alt+T Tools menu open with shortcuts too.

In comparison with gen rendering, shortcut always appear.

But perhaps everything is ok, I must recognize I don't know what we should expect with the different renderings.
Comment 7 Terrence Enger 2017-05-12 04:37:07 UTC
Thank you, Caolán.  I see and can use the expected shortcut key in
daily Linux dbgutil repository version 2017-05-11.  I am setting
status VERIFIED FIXED.

Julian,

I, too, get confused.  I just made my judgement from the shortcut keys
advertised on the other options on the Tools menu.  I cannot even
remember what I was doing that made me try gtk3.