Resolves: tdf#107693 move CreateAutoMnemonics from Execute to Activate

Change-Id: Id65dfcc40dd20c391e12108abc6a6531e4c96523